--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0506.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0506.html
@@ -78,9 +78,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 600 205 842 256" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 600 205 842 256">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντιχείμενα</ins>
+            <ins class="alt" title="nlp 2.00">ἀντικείμενα</ins>
+          </span>
+        </span>
+        <span id="w_12_1" class="ocr_word" title="bbox 600 205 842 256">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 873 201 1022 242" lang="grc">
@@ -121,11 +126,6 @@
         <span id="w_20" class="ocr_word" title="bbox 1781 206 1929 257" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ψυχρόν</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1961 203 2101 256" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
           </span>
         </span>
       </span>
@@ -182,7 +182,7 @@
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1803 274 2102 328" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεταβάλλεται</ins>
+            <ins title="nlp 2.00">(μεταβάλλεται</ins>
           </span>
         </span>
       </span>
@@ -259,7 +259,7 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 2075 359 2100 396" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">η</ins>
           </span>
         </span>
       </span>
@@ -448,9 +448,14 @@
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1320 548 1531 604" lang="grc">
+        <span id="w_84_0" class="ocr_word" title="bbox 1320 548 1531 604">
           <span class="alternatives">
-            <ins title="nlp 2.00">περιπατεῖ᾿·</ins>
+            <ins class="alt" title="nlp 2.00">περιπατεῖ᾿.</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 1320 548 1531 604">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1585 565 1627 589" lang="grc">
@@ -471,11 +476,6 @@
         <span id="w_88" class="ocr_word" title="bbox 1928 567 1971 592" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
-          </span>
-        </span>
-        <span id="w_89" class="ocr_word" title="bbox 1995 566 2102 592" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δύνα·</ins>
           </span>
         </span>
       </span>
@@ -530,9 +530,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_101" class="ocr_word" title="bbox 1988 635 2102 661" lang="grc">
+        <span id="w_101_0" class="ocr_word" title="bbox 1988 635 2102 661">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαταται</ins>
+            <ins class="alt" title="nlp 2.00">καταφάσεως</ins>
           </span>
         </span>
       </span>
@@ -748,9 +748,9 @@
             <ins class="alt" title="nlp 1.00">ἐρρέθη</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 1845 893 2101 952" lang="grc">
+        <span id="w_143_0" class="ocr_word" title="bbox 1845 893 2101 952">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ περιπατεῖ᾿ .</ins>
+            <ins class="alt" title="nlp 2.00">῾περιπατεῖ᾿.</ins>
           </span>
         </span>
       </span>
@@ -1514,9 +1514,14 @@
             <ins class="alt" title="nlp 1.00">ἀντιφάσεως</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 891 1803 1132 1844" lang="grc">
+        <span id="w_291_0" class="ocr_word" title="bbox 891 1803 1132 1844">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντίχεινται·</ins>
+            <ins class="alt" title="nlp 2.00">ἀντίκεινται·</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 891 1803 1132 1844">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1173 1804 1234 1844" lang="grc">
@@ -1552,11 +1557,6 @@
         <span id="w_298" class="ocr_word" title="bbox 1954 1819 2020 1844" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δύο</ins>
-          </span>
-        </span>
-        <span id="w_299" class="ocr_word" title="bbox 2059 1819 2103 1843" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
       </span>
@@ -2227,12 +2227,7 @@
       <span class="ocr_line" title="bbox 348 2658 2129 2708">
         <span id="w_428" class="ocr_word" title="bbox 348 2659 380 2692">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">4.</ins>
-          </span>
-        </span>
-        <span id="w_429" class="ocr_word" title="bbox 399 2659 419 2692">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
+            <ins class="alt" title="nlp 2.00">4.5</ins>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 446 2670 508 2693" lang="grc">
@@ -2327,12 +2322,7 @@
       <span class="ocr_line" title="bbox 347 2718 2128 2768">
         <span id="w_447" class="ocr_word" title="bbox 347 2718 381 2750">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">7.</ins>
-          </span>
-        </span>
-        <span id="w_448" class="ocr_word" title="bbox 406 2718 427 2752">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">8</ins>
+            <ins class="alt" title="nlp 2.00">7.8</ins>
           </span>
         </span>
         <span id="w_449" class="ocr_word" title="bbox 452 2720 513 2763" lang="grc">
@@ -2392,12 +2382,7 @@
         </span>
         <span id="w_460_0" class="ocr_word" title="bbox 1821 2723 1960 2766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_460_1" class="ocr_word" title="bbox 1821 2723 1960 2766">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_461" class="ocr_word" title="bbox 1988 2721 2022 2756" lang="grc">
@@ -2808,19 +2793,19 @@
             <ins title="nlp 2.00">ἀντιφ.</ins>
           </span>
         </span>
-        <span id="w_535" class="ocr_word" title="bbox 1843 3027 1948 3049" lang="grc">
+        <span id="w_535_0" class="ocr_word" title="bbox 1843 3027 1948 3049">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντίχ.</ins>
+            <ins class="alt" title="nlp 2.00">ἀντίκ.</ins>
+          </span>
+        </span>
+        <span id="w_535_1" class="ocr_word" title="bbox 1843 3027 1948 3049">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_536" class="ocr_word" title="bbox 1975 3015 2072 3060" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγον</ins>
-          </span>
-        </span>
-        <span id="w_537" class="ocr_word" title="bbox 2101 3016 2128 3048" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
       </span>
