--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0554.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0554.html
@@ -118,14 +118,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 427 271 2112 327">
-        <span id="w_22" class="ocr_word" title="bbox 427 273 687 314" lang="grc">
+        <span id="w_22_0" class="ocr_word" title="bbox 427 273 687 314">
           <span class="alternatives">
-            <ins title="nlp 2.00">τεχταίνεσθαι</ins>
+            <ins class="alt" title="nlp 2.00">τεκταίνεσθαι</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 707 272 950 327" lang="grc">
+        <span id="w_22_1" class="ocr_word" title="bbox 427 273 687 314">
           <span class="alternatives">
-            <ins title="nlp 2.00">αυμβεβηχὸς</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκὸς</ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 967 273 1069 324" lang="grc">
@@ -252,9 +252,14 @@
             <ins class="alt" title="nlp 1.00">ἐπιστήμης</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1004 409 1209 452" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 1004 409 1209 452">
           <span class="alternatives">
-            <ins title="nlp 2.00">δεχτιχόν’.</ins>
+            <ins class="alt" title="nlp 2.00">δεκτικόν᾿.</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 1004 409 1209 452">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1262 427 1304 451" lang="grc">
@@ -282,11 +287,6 @@
             <ins class="alt" title="nlp 1.00">μέρος</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 2031 424 2112 452" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 379 478 2113 535">
         <span id="w_55" class="ocr_word" title="bbox 379 495 397 526">
@@ -294,19 +294,34 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 425 497 490 522" lang="grc">
+        <span id="w_56_0" class="ocr_word" title="bbox 425 497 490 522">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 508 483 680 522" lang="grc">
+        <span id="w_56_1" class="ocr_word" title="bbox 425 497 490 522">
           <span class="alternatives">
-            <ins title="nlp 2.00">δεχτικοῦ &lt;τῆς ἐπιστήμης&gt; (πάντες</ins>
+            <ins class="alt" title="nlp 2.00">δεκτικοῦ</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1216 495 1286 533" lang="grc">
+        <span id="w_57_0" class="ocr_word" title="bbox 508 483 680 522">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τῆς</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 508 483 680 522">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐπιστήμης&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_58_0" class="ocr_word" title="bbox 1216 495 1286 533">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">(πάντες</ins>
+          </span>
+        </span>
+        <span id="w_58_1" class="ocr_word" title="bbox 1216 495 1286 533">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1301 495 1336 519" lang="grc">
@@ -336,16 +351,11 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1928 495 2113 520" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τεκταίνε-</ins>
+            <ins title="nlp 2.00">τεκταίνεσθαι)·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 425 549 2113 604">
-        <span id="w_65" class="ocr_word" title="bbox 425 550 552 604" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι)·</ins>
-          </span>
-        </span>
         <span id="w_66" class="ocr_word" title="bbox 586 566 620 590" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
@@ -862,9 +872,14 @@
             <ins class="alt" title="nlp 1.00">δευτέρῳ</ins>
           </span>
         </span>
-        <span id="w_167" class="ocr_word" title="bbox 1235 1104 1239 1154">
+        <span id="w_167_0" class="ocr_word" title="bbox 1235 1104 1239 1154">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_167_1" class="ocr_word" title="bbox 1235 1104 1239 1154">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 1267 1119 1314 1144" lang="grc">
@@ -890,11 +905,6 @@
         <span id="w_172" class="ocr_word" title="bbox 1931 1104 2062 1156" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
-          </span>
-        </span>
-        <span id="w_173" class="ocr_word" title="bbox 2085 1107 2172 1143">
-          <span class="alternatives">
-            <ins title="nlp 2.00">208v</ins>
           </span>
         </span>
       </span>
@@ -1239,9 +1249,9 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_240" class="ocr_word" title="bbox 1959 1521 2114 1571" lang="grc">
+        <span id="w_240_0" class="ocr_word" title="bbox 1959 1521 2114 1571">
           <span class="alternatives">
-            <ins title="nlp 2.00">λέγουσ’.</ins>
+            <ins class="alt" title="nlp 2.00">λέγουσι</ins>
           </span>
         </span>
       </span>
@@ -1291,9 +1301,9 @@
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 2003 1604 2113 1640" lang="grc">
+        <span id="w_250_0" class="ocr_word" title="bbox 2003 1604 2113 1640">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεταδιδόασι</ins>
+            <ins class="alt" title="nlp 2.00">μεταδιδόασιν</ins>
           </span>
         </span>
       </span>
@@ -1883,14 +1893,14 @@
             <ins class="alt" title="nlp 1.00">γειτνιάζον</ins>
           </span>
         </span>
-        <span id="w_366" class="ocr_word" title="bbox 1221 2354 1320 2404" lang="grc">
+        <span id="w_367_0" class="ocr_word" title="bbox 1335 2367 1343 2375">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῇ</ins>
+            <ins class="alt" title="nlp 2.00">αὐτῇ·</ins>
           </span>
         </span>
-        <span id="w_367" class="ocr_word" title="bbox 1335 2367 1343 2375">
+        <span id="w_367_1" class="ocr_word" title="bbox 1335 2367 1343 2375">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1378 2366 1417 2390" lang="grc">
@@ -1921,11 +1931,6 @@
         <span id="w_373" class="ocr_word" title="bbox 1955 2351 2017 2391" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_374" class="ocr_word" title="bbox 2050 2366 2116 2389" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
       </span>
@@ -2040,9 +2045,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_396" class="ocr_word" title="bbox 1184 2615 1304 2640" lang="grc">
+        <span id="w_396_0" class="ocr_word" title="bbox 1184 2615 1304 2640">
           <span class="alternatives">
-            <ins title="nlp 2.00">πάντες—τεχτ.</ins>
+            <ins class="alt" title="nlp 2.00">πάντες—τεκτ.</ins>
+          </span>
+        </span>
+        <span id="w_396_1" class="ocr_word" title="bbox 1184 2615 1304 2640">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1484 2612 1549 2635">
@@ -2065,12 +2075,6 @@
         <span id="w_400" class="ocr_word" title="bbox 1868 2612 1970 2635" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐπιστ.</ins>
-          </span>
-        </span>
-        <span id="w_401" class="ocr_word" title="bbox 1998 2602 2130 2635">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inserui</ins>
-            <del title="nlp 0.90">inserui</del>
           </span>
         </span>
       </span>
@@ -2327,8 +2331,7 @@
         </span>
         <span id="w_448" class="ocr_word" title="bbox 1756 2779 1807 2811">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II.</ins>
-            <del title="nlp 0.90">II.</del>
+            <ins title="nlp 2.00">11.</ins>
           </span>
         </span>
         <span id="w_449" class="ocr_word" title="bbox 1833 2777 1871 2810">
@@ -2338,8 +2341,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1897 2781 1980 2810">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aute</ins>
-            <del title="nlp 0.90">aute</del>
+            <ins title="nlp 2.00">ante</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 2007 2776 2105 2821" lang="grc">
@@ -2433,9 +2435,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_468" class="ocr_word" title="bbox 820 2911 918 2944" lang="grc">
+        <span id="w_468_0" class="ocr_word" title="bbox 820 2911 918 2944">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμ..</ins>
+            <ins class="alt" title="nlp 2.00">γραμ.</ins>
+          </span>
+        </span>
+        <span id="w_468_1" class="ocr_word" title="bbox 820 2911 918 2944">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_469" class="ocr_word" title="bbox 946 2899 1067 2932">
@@ -2491,11 +2498,6 @@
             <ins class="alt" title="nlp 1.00">οὐχ</ins>
           </span>
         </span>
-        <span id="w_479" class="ocr_word" title="bbox 2142 2892 2189 2929" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 363 2952 2140 3002">
         <span id="w_480" class="ocr_word" title="bbox 363 2967 497 3000" lang="grc">
@@ -2503,9 +2505,14 @@
             <ins class="alt" title="nlp 1.00">ὁρισμὸς</ins>
           </span>
         </span>
-        <span id="w_481" class="ocr_word" title="bbox 524 2957 556 3000" lang="grc">
+        <span id="w_481_0" class="ocr_word" title="bbox 524 2957 556 3000">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins class="alt" title="nlp 2.00">(ὁ</ins>
+          </span>
+        </span>
+        <span id="w_481_1" class="ocr_word" title="bbox 524 2957 556 3000">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_482" class="ocr_word" title="bbox 576 2959 656 2999">
@@ -2576,12 +2583,6 @@
             <ins class="alt" title="nlp 1.00">θὼ.</ins>
           </span>
         </span>
-        <span id="w_495" class="ocr_word" title="bbox 2112 2952 2140 2984">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 363 3009 2188 3060">
         <span id="w_496" class="ocr_word" title="bbox 363 3027 619 3060" lang="grc">
@@ -2642,9 +2643,9 @@
             <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
-        <span id="w_507" class="ocr_word" title="bbox 2025 3009 2188 3053" lang="grc">
+        <span id="w_507_0" class="ocr_word" title="bbox 2025 3009 2188 3053">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεταδίδ.</ins>
+            <ins class="alt" title="nlp 2.00">μεταδίδ.]</ins>
           </span>
         </span>
       </span>
@@ -2718,14 +2719,14 @@
             <ins class="alt" title="nlp 1.00">29</ins>
           </span>
         </span>
-        <span id="w_521" class="ocr_word" title="bbox 1966 3068 2102 3102" lang="grc">
+        <span id="w_521_0" class="ocr_word" title="bbox 1966 3068 2102 3102">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθέστ.</ins>
+            <ins class="alt" title="nlp 2.00">καθέστ.</ins>
           </span>
         </span>
-        <span id="w_522" class="ocr_word" title="bbox 2129 3080 2187 3102" lang="grc">
+        <span id="w_521_1" class="ocr_word" title="bbox 1966 3068 2102 3102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2775,8 +2776,7 @@
         </span>
         <span id="w_531" class="ocr_word" title="bbox 1253 3146 1292 3178">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xtj</ins>
-            <del title="nlp 0.90">xtj</del>
+            <ins title="nlp 2.00">τῆ</ins>
           </span>
         </span>
         <span id="w_532" class="ocr_word" title="bbox 1323 3144 1462 3177" lang="grc">
@@ -2839,9 +2839,14 @@
             <ins title="nlp 2.00">γειτν.]</ins>
           </span>
         </span>
-        <span id="w_543" class="ocr_word" title="bbox 1105 3193 1272 3231" lang="grc">
+        <span id="w_543_0" class="ocr_word" title="bbox 1105 3193 1272 3231">
           <span class="alternatives">
-            <ins title="nlp 2.00">οἰχειάζον</ins>
+            <ins class="alt" title="nlp 2.00">οἰκειάζον</ins>
+          </span>
+        </span>
+        <span id="w_543_1" class="ocr_word" title="bbox 1105 3193 1272 3231">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_544" class="ocr_word" title="bbox 1299 3193 1329 3226">
@@ -2870,12 +2875,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_549" class="ocr_word" title="bbox 1921 3187 1951 3220">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
