--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0555.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0555.html
@@ -424,8 +424,7 @@
       <span class="ocr_line" title="bbox 303 795 1861 860">
         <span id="w_81" class="ocr_word" title="bbox 303 795 356 836">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">To</ins>
-            <del title="nlp 0.90">To</del>
+            <ins title="nlp 2.00">Τὸ</ins>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 380 799 555 837" lang="grc">
@@ -507,12 +506,22 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 120 1015 1859 1082">
-        <span id="w_100" class="ocr_word" title="bbox 242 1026 314 1069">
+        <span id="w_100_0" class="ocr_word" title="bbox 242 1026 314 1069">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">10p.12,1</ins>
+            <ins class="alt" title="nlp 2.00">10</ins>
           </span>
         </span>
-        <span id="w_101_0" class="ocr_word" title="bbox 370 1015 424 1057">
+        <span id="w_100_1" class="ocr_word" title="bbox 242 1026 314 1069">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">p.</ins>
+          </span>
+        </span>
+        <span id="w_101_0_0" class="ocr_word" title="bbox 370 1015 424 1057">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">12,1</ins>
+          </span>
+        </span>
+        <span id="w_101_0_1" class="ocr_word" title="bbox 370 1015 424 1057">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">Οἱ</ins>
           </span>
@@ -908,11 +917,6 @@
             <ins class="alt" title="nlp 1.00">ὁρισμοὺς</ins>
           </span>
         </span>
-        <span id="w_174" class="ocr_word" title="bbox 1736 2013 1848 2053" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συμβάλλεται.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 103 2065 1154 2120">
         <span id="w_175" class="ocr_word" title="bbox 103 2074 146 2104">
@@ -920,9 +924,14 @@
             <ins title="nlp 2.00">20</ins>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 1150 2066 1154 2114">
+        <span id="w_177_0" class="ocr_word" title="bbox 1150 2066 1154 2114">
           <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
+            <ins class="alt" title="nlp 2.00">συμβάλλεται.</ins>
+          </span>
+        </span>
+        <span id="w_177_1" class="ocr_word" title="bbox 1150 2066 1154 2114">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -1022,34 +1031,54 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_196" class="ocr_word" title="bbox 225 2410 302 2453">
+        <span id="w_196_0" class="ocr_word" title="bbox 225 2410 302 2453">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">12,4</ins>
+            <ins class="alt" title="nlp 2.00">12,4</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 368 2398 431 2441">
+        <span id="w_196_1" class="ocr_word" title="bbox 225 2410 302 2453">
           <span class="alternatives">
-            <ins title="nlp 2.00">Οὐ γὰρ τὸ πεφυχέναι πλεῖν</ins>
+            <ins class="alt" title="nlp 2.00">Οὐ</ins>
           </span>
         </span>
-        <span id="w_198_0" class="ocr_word" title="bbox 468 2400 550 2454">
+        <span id="w_197_0" class="ocr_word" title="bbox 368 2398 431 2441">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_198_1" class="ocr_word" title="bbox 468 2400 550 2454">
+        <span id="w_197_1" class="ocr_word" title="bbox 368 2398 431 2441">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_199_0" class="ocr_word" title="bbox 592 2401 638 2440">
+        <span id="w_198_0_0" class="ocr_word" title="bbox 468 2400 550 2454">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">πεφυχέναι</ins>
+            <ins class="alt" title="nlp 2.00">πεφυκέναι</ins>
           </span>
         </span>
-        <span id="w_199_1" class="ocr_word" title="bbox 592 2401 638 2440">
+        <span id="w_198_0_1" class="ocr_word" title="bbox 468 2400 550 2454">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πλεῖν</ins>
+          </span>
+        </span>
+        <span id="w_198_1_0" class="ocr_word" title="bbox 468 2400 550 2454">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">διαφορὰ</ins>
+          </span>
+        </span>
+        <span id="w_198_1_1" class="ocr_word" title="bbox 468 2400 550 2454">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀνθρώπου,</ins>
+          </span>
+        </span>
+        <span id="w_199_0_0" class="ocr_word" title="bbox 592 2401 638 2440">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἰ</ins>
+          </span>
+        </span>
+        <span id="w_199_0_1" class="ocr_word" title="bbox 592 2401 638 2440">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1279,9 +1308,14 @@
             <ins title="nlp 2.00">προσεξεργαζόμενοι</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 669 2883 712 2925" lang="grc">
+        <span id="w_248_0" class="ocr_word" title="bbox 669 2883 712 2925">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οἱ</ins>
+            <ins class="alt" title="nlp 2.00">(οἱ</ins>
+          </span>
+        </span>
+        <span id="w_248_1" class="ocr_word" title="bbox 669 2883 712 2925">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 731 2885 811 2923">
@@ -1325,12 +1359,6 @@
         <span id="w_256" class="ocr_word" title="bbox 1628 2896 1714 2929" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">διαφ.</ins>
-          </span>
-        </span>
-        <span id="w_257" class="ocr_word" title="bbox 1733 2885 1860 2928">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Porph.</ins>
-            <del title="nlp 0.90">Porph.</del>
           </span>
         </span>
       </span>
