--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0507.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0507.html
@@ -162,7 +162,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1148 260 1302 312" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γίνεται</ins>
+            <ins title="nlp 2.00">(γίνεται</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1322 277 1393 316" lang="grc">
@@ -467,7 +467,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 696 601 782 655" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins title="nlp 2.00">(τοῦ</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 815 617 886 657" lang="grc">
@@ -1273,9 +1273,14 @@
             <ins class="alt" title="nlp 1.00">ματον</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 360 1588 423 1612" lang="grc">
+        <span id="w_244_0" class="ocr_word" title="bbox 360 1588 423 1612">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 360 1588 423 1612">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 455 1588 508 1616" lang="grc">
@@ -1313,19 +1318,19 @@
             <ins class="alt" title="nlp 1.00">ἐστιν</ins>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 1381 1591 1405 1628" lang="grc">
+        <span id="w_252_0" class="ocr_word" title="bbox 1381 1591 1405 1628">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἢ χεχινημένον.</ins>
+            <ins class="alt" title="nlp 2.00">ἤ</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 1381 1591 1405 1628">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κεκινημένον.</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1762 1592 1823 1616" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 1856 1592 1888 1616" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
       </span>
@@ -1698,9 +1703,9 @@
             <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
-        <span id="w_327" class="ocr_word" title="bbox 1863 1927 1945 1962">
+        <span id="w_327_0" class="ocr_word" title="bbox 1863 1927 1945 1962">
           <span class="alternatives">
-            <ins title="nlp 2.00">190ν</ins>
+            <ins class="alt" title="nlp 2.00">190v</ins>
           </span>
         </span>
       </span>
@@ -2068,12 +2073,7 @@
         </span>
         <span id="w_397_0" class="ocr_word" title="bbox 569 2462 610 2495">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Τ</ins>
-          </span>
-        </span>
-        <span id="w_397_1" class="ocr_word" title="bbox 569 2462 610 2495">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">Τ:</ins>
           </span>
         </span>
         <span id="w_398" class="ocr_word" title="bbox 639 2472 710 2506" lang="grc">
@@ -2566,12 +2566,7 @@
         </span>
         <span id="w_489_0" class="ocr_word" title="bbox 1085 2815 1145 2848">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">35</ins>
-          </span>
-        </span>
-        <span id="w_489_1" class="ocr_word" title="bbox 1085 2815 1145 2848">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">35:</ins>
           </span>
         </span>
         <span id="w_490" class="ocr_word" title="bbox 1173 2814 1288 2852" lang="grc">
@@ -2832,7 +2827,7 @@
         </span>
         <span id="w_539" class="ocr_word" title="bbox 1681 2988 1780 3032" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιεῖ</ins>
+            <ins title="nlp 2.00">(ποιεῖ</ins>
           </span>
         </span>
         <span id="w_540" class="ocr_word" title="bbox 1806 2990 1947 3034" lang="grc">
@@ -2932,12 +2927,7 @@
       <span class="ocr_line" title="bbox 128 3105 1944 3154">
         <span id="w_557" class="ocr_word" title="bbox 128 3108 182 3141">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">29.</ins>
-          </span>
-        </span>
-        <span id="w_558" class="ocr_word" title="bbox 207 3108 252 3142">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
+            <ins class="alt" title="nlp 2.00">29.30</ins>
           </span>
         </span>
         <span id="w_559" class="ocr_word" title="bbox 283 3120 425 3153" lang="grc">
@@ -2996,12 +2986,7 @@
         </span>
         <span id="w_569_0" class="ocr_word" title="bbox 1898 3108 1944 3142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">K</ins>
-          </span>
-        </span>
-        <span id="w_569_1" class="ocr_word" title="bbox 1898 3108 1944 3142">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">K:</ins>
           </span>
         </span>
       </span>
@@ -3023,12 +3008,7 @@
         </span>
         <span id="w_573_0" class="ocr_word" title="bbox 519 3168 562 3201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">T</ins>
-          </span>
-        </span>
-        <span id="w_573_1" class="ocr_word" title="bbox 519 3168 562 3201">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">T:</ins>
           </span>
         </span>
         <span id="w_574" class="ocr_word" title="bbox 591 3179 732 3212" lang="grc">
