--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0556.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0556.html
@@ -124,9 +124,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 386 259 2067 319">
-        <span id="w_25" class="ocr_word" title="bbox 386 264 778 319" lang="grc">
+        <span id="w_25_0" class="ocr_word" title="bbox 386 264 778 319">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμματιχεύεσθαι,</ins>
+            <ins class="alt" title="nlp 2.00">γραμματικεύεσθαι,</ins>
+          </span>
+        </span>
+        <span id="w_25_1" class="ocr_word" title="bbox 386 264 778 319">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 809 267 1053 316" lang="grc">
@@ -167,11 +172,6 @@
         <span id="w_33" class="ocr_word" title="bbox 1860 259 1971 314" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἴπῃς</ins>
-          </span>
-        </span>
-        <span id="w_34" class="ocr_word" title="bbox 2003 261 2067 301" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -417,9 +417,9 @@
             <ins class="alt" title="nlp 2.00">Πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_80_1" class="ocr_word" title="bbox 1095 941 1264 997">
+        <span id="w_80_1_0" class="ocr_word" title="bbox 1095 941 1264 997">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">λα’.</ins>
+            <ins class="alt" title="nlp 2.00">λα΄.</ins>
           </span>
         </span>
       </span>
@@ -1170,9 +1170,14 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 1015 2030 1326 2086" lang="grc">
+        <span id="w_224_0" class="ocr_word" title="bbox 1015 2030 1326 2086">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπισυμβεβηχός</ins>
+            <ins class="alt" title="nlp 2.00">ἐπισυμβεβηκός</ins>
+          </span>
+        </span>
+        <span id="w_224_1" class="ocr_word" title="bbox 1015 2030 1326 2086">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1348 2044 1462 2071" lang="grc">
@@ -1198,11 +1203,6 @@
         <span id="w_229" class="ocr_word" title="bbox 1829 2030 1952 2073" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὕτως</ins>
-          </span>
-        </span>
-        <span id="w_230" class="ocr_word" title="bbox 1983 2044 2081 2084" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔχει</ins>
           </span>
         </span>
       </span>
@@ -1437,8 +1437,7 @@
       <span class="ocr_line" title="bbox 336 2469 2158 2522">
         <span id="w_275" class="ocr_word" title="bbox 336 2477 351 2509">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">1</ins>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 381 2475 567 2522" lang="grc">
@@ -1726,20 +1725,20 @@
             <ins title="nlp 2.00">4</ins>
           </span>
         </span>
-        <span id="w_330" class="ocr_word" title="bbox 1782 2648 1905 2692" lang="grc">
+        <span id="w_330_0" class="ocr_word" title="bbox 1782 2648 1905 2692">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἰρήχ.]</ins>
+            <ins class="alt" title="nlp 2.00">εἰρήκ.]</ins>
+          </span>
+        </span>
+        <span id="w_330_1" class="ocr_word" title="bbox 1782 2648 1905 2692">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1933 2659 1964 2691">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">p.</ins>
             <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_332" class="ocr_word" title="bbox 1988 2646 2110 2686">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">197,29</ins>
           </span>
         </span>
       </span>
@@ -1754,9 +1753,14 @@
             <ins class="alt" title="nlp 1.00">πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_335" class="ocr_word" title="bbox 519 2708 546 2744" lang="grc">
+        <span id="w_335_0" class="ocr_word" title="bbox 519 2708 546 2744">
           <span class="alternatives">
-            <ins title="nlp 2.00">λ’</ins>
+            <ins class="alt" title="nlp 2.00">λ΄</ins>
+          </span>
+        </span>
+        <span id="w_335_1" class="ocr_word" title="bbox 519 2708 546 2744">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 575 2710 621 2743" lang="grc">
@@ -1835,18 +1839,11 @@
             <del title="nlp 0.90">om.</del>
           </span>
         </span>
-        <span id="w_350" class="ocr_word" title="bbox 2044 2705 2070 2738">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 338 2764 2064 2814">
         <span id="w_351" class="ocr_word" title="bbox 338 2770 377 2804">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 405 2770 587 2814" lang="grc">
@@ -1978,9 +1975,9 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_376" class="ocr_word" title="bbox 1905 2828 2028 2868" lang="grc">
+        <span id="w_376_0" class="ocr_word" title="bbox 1905 2828 2028 2868">
           <span class="alternatives">
-            <ins title="nlp 2.00">χωρεἶν—ἴδιον</ins>
+            <ins class="alt" title="nlp 2.00">χωρεῖν—ἴδιον</ins>
           </span>
         </span>
       </span>
@@ -2059,16 +2056,21 @@
             <ins class="alt" title="nlp 1.00">17</ins>
           </span>
         </span>
-        <span id="w_391" class="ocr_word" title="bbox 2077 2881 2160 2926" lang="grc">
+        <span id="w_391_0" class="ocr_word" title="bbox 2077 2881 2160 2926">
           <span class="alternatives">
-            <ins title="nlp 2.00">λαμβάνεται—ἐρουσ.</ins>
+            <ins class="alt" title="nlp 2.00">λαμβάνεται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 339 2938 2158 2991">
-        <span id="w_393" class="ocr_word" title="bbox 662 2945 735 2988">
+        <span id="w_393_0" class="ocr_word" title="bbox 662 2945 735 2988">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(18)</ins>
+            <ins class="alt" title="nlp 2.00">—ἐπουσ.</ins>
+          </span>
+        </span>
+        <span id="w_393_1" class="ocr_word" title="bbox 662 2945 735 2988">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">(18)</ins>
           </span>
         </span>
         <span id="w_394" class="ocr_word" title="bbox 762 2955 828 2978">
@@ -2118,8 +2120,7 @@
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1912 2944 1961 2973">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tcB</ins>
-            <del title="nlp 0.90">tcB</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1988 2938 2158 2986" lang="grc">
