--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0507.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0507.html
@@ -160,9 +160,14 @@
             <ins class="alt" title="nlp 1.00">μεταβάλλεται</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 1148 260 1302 312" lang="grc">
+        <span id="w_28_0" class="ocr_word" title="bbox 1148 260 1302 312">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γίνεται</ins>
+            <ins class="alt" title="nlp 2.00">(γίνεται</ins>
+          </span>
+        </span>
+        <span id="w_28_1" class="ocr_word" title="bbox 1148 260 1302 312">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1322 277 1393 316" lang="grc">
@@ -183,11 +188,6 @@
         <span id="w_32" class="ocr_word" title="bbox 1657 282 1700 306" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_33" class="ocr_word" title="bbox 1722 264 1896 320" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔμψυχον</ins>
           </span>
         </span>
       </span>
@@ -465,9 +465,14 @@
             <ins class="alt" title="nlp 1.00">ἔμψυχον</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 696 601 782 655" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 696 601 782 655">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">(τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 696 601 782 655">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 815 617 886 657" lang="grc">
@@ -503,11 +508,6 @@
         <span id="w_94" class="ocr_word" title="bbox 1628 625 1725 650" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάνυ</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1748 613 1894 665" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φαῦλον</ins>
           </span>
         </span>
       </span>
@@ -837,9 +837,14 @@
             <ins class="alt" title="nlp 1.00">φήσουσι</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 801 1017 905 1062" lang="grc">
+        <span id="w_159_0" class="ocr_word" title="bbox 801 1017 905 1062">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ πῶς</ins>
+            <ins class="alt" title="nlp 2.00">῾πῶς</ins>
+          </span>
+        </span>
+        <span id="w_159_1" class="ocr_word" title="bbox 801 1017 905 1062">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 950 1033 1012 1058" lang="grc">
@@ -870,11 +875,6 @@
         <span id="w_165" class="ocr_word" title="bbox 1725 1019 1778 1064" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τί</ins>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1821 1041 1890 1077" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -1268,11 +1268,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 1573 1888 1629">
-        <span id="w_243" class="ocr_word" title="bbox 211 1587 328 1626" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ματον</ins>
-          </span>
-        </span>
         <span id="w_244_0" class="ocr_word" title="bbox 360 1588 423 1612">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">καὶ</ins>
@@ -1328,9 +1323,14 @@
             <ins class="alt" title="nlp 2.00">κεκινημένον.</ins>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 1762 1592 1823 1616" lang="grc">
+        <span id="w_253_0" class="ocr_word" title="bbox 1762 1592 1823 1616">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_253_1" class="ocr_word" title="bbox 1762 1592 1823 1616">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἰ</ins>
           </span>
         </span>
       </span>
@@ -2825,14 +2825,9 @@
             <ins class="alt" title="nlp 1.00">πλανώμεναι</ins>
           </span>
         </span>
-        <span id="w_539" class="ocr_word" title="bbox 1681 2988 1780 3032" lang="grc">
+        <span id="w_539_0" class="ocr_word" title="bbox 1681 2988 1780 3032">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ποιεῖ</ins>
-          </span>
-        </span>
-        <span id="w_540" class="ocr_word" title="bbox 1806 2990 1947 3034" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σφαίρας</ins>
+            <ins class="alt" title="nlp 2.00">(ποιεὶ</ins>
           </span>
         </span>
       </span>
