--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0557.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0557.html
@@ -47,7 +47,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1450 112 1481 144">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[Porpli.p.’2,lo]</ins>
+            <ins class="alt" title="nlp 2.00">’2,lo]</ins>
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
@@ -817,18 +817,13 @@
             <ins class="alt" title="nlp 1.00">δέ’</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1688 1055 1824 1095" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1688 1055 1824 1095">
           <span class="alternatives">
-            <ins title="nlp 2.00">προσεθὴχαμεν),</ins>
+            <ins class="alt" title="nlp 2.00">προσεθήκαμεν),</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 142 1111 1823 1169">
-        <span id="w_158" class="ocr_word" title="bbox 142 1114 354 1169" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θήκαμεν),</ins>
-          </span>
-        </span>
         <span id="w_159" class="ocr_word" title="bbox 390 1131 414 1168" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἢ</ins>
@@ -1345,9 +1340,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 146 1671 1826 1720">
-        <span id="w_259" class="ocr_word" title="bbox 146 1684 197 1709" lang="grc">
+        <span id="w_259_0" class="ocr_word" title="bbox 146 1684 197 1709">
           <span class="alternatives">
-            <ins title="nlp 2.00">δἐ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
+          </span>
+        </span>
+        <span id="w_259_1" class="ocr_word" title="bbox 146 1684 197 1709">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 226 1685 268 1708" lang="grc">
@@ -1398,11 +1398,6 @@
         <span id="w_270" class="ocr_word" title="bbox 1586 1677 1628 1701" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_271" class="ocr_word" title="bbox 1661 1675 1826 1714" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εμφανεστερον</ins>
           </span>
         </span>
       </span>
@@ -2303,8 +2298,7 @@
         </span>
         <span id="w_444" class="ocr_word" title="bbox 1296 2599 1324 2631">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_445" class="ocr_word" title="bbox 1451 2595 1490 2630">
@@ -2367,9 +2361,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_456" class="ocr_word" title="bbox 906 2671 968 2692" lang="grc">
+        <span id="w_456_0" class="ocr_word" title="bbox 906 2671 968 2692">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐζ</ins>
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_456_1" class="ocr_word" title="bbox 906 2671 968 2692">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_457" class="ocr_word" title="bbox 995 2658 1114 2691">
@@ -2406,11 +2405,6 @@
         <span id="w_463" class="ocr_word" title="bbox 1668 2653 1765 2685" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παντὶ</ins>
-          </span>
-        </span>
-        <span id="w_464" class="ocr_word" title="bbox 1790 2651 1901 2696" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀνθρ.]</ins>
           </span>
         </span>
       </span>
@@ -2753,8 +2747,7 @@
         </span>
         <span id="w_528" class="ocr_word" title="bbox 586 2959 718 2996">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">trausp.</ins>
-            <del title="nlp 0.90">trausp.</del>
+            <ins title="nlp 2.00">transp.</ins>
           </span>
         </span>
         <span id="w_529" class="ocr_word" title="bbox 736 2952 800 2986">
@@ -2785,8 +2778,7 @@
         </span>
         <span id="w_534" class="ocr_word" title="bbox 1377 2948 1497 2982">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUoc.</ins>
-            <del title="nlp 0.90">coUoc.</del>
+            <ins title="nlp 2.00">colloc.</ins>
           </span>
         </span>
         <span id="w_535" class="ocr_word" title="bbox 1517 2947 1546 2979" lang="grc">
@@ -2871,8 +2863,7 @@
         </span>
         <span id="w_550" class="ocr_word" title="bbox 1642 3007 1692 3036">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xtii</ins>
-            <del title="nlp 0.90">xtii</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_551" class="ocr_word" title="bbox 1718 3003 1748 3035">
@@ -2987,8 +2978,7 @@
         </span>
         <span id="w_571" class="ocr_word" title="bbox 418 3129 536 3162">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">colioc.</ins>
-            <del title="nlp 0.90">colioc.</del>
+            <ins title="nlp 2.00">colloc.</ins>
           </span>
         </span>
         <span id="w_572" class="ocr_word" title="bbox 567 3129 592 3159">
