--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0508.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0508.html
@@ -88,7 +88,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 514 193 646 246" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 690 204 762 243" lang="grc">
@@ -617,9 +617,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 1178 755 1385 782" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 1178 755 1385 782">
           <span class="alternatives">
-            <ins title="nlp 2.00">χινούμενα</ins>
+            <ins class="alt" title="nlp 2.00">κινούμενα</ins>
+          </span>
+        </span>
+        <span id="w_117_1" class="ocr_word" title="bbox 1178 755 1385 782">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1417 754 1454 779" lang="grc">
@@ -640,11 +645,6 @@
         <span id="w_121" class="ocr_word" title="bbox 1862 737 1962 775" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
-          </span>
-        </span>
-        <span id="w_122" class="ocr_word" title="bbox 1994 749 2070 788" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὴν</ins>
           </span>
         </span>
       </span>
@@ -880,9 +880,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 483 1022 632 1079">
+        <span id="w_168_0" class="ocr_word" title="bbox 483 1022 632 1079">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τοῦτο&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τοῦτο&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_168_1" class="ocr_word" title="bbox 483 1022 632 1079">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 663 1020 722 1063" lang="grc">
@@ -898,11 +903,6 @@
         <span id="w_171" class="ocr_word" title="bbox 959 1036 1054 1075" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅπερ</ins>
-          </span>
-        </span>
-        <span id="w_172" class="ocr_word" title="bbox 1086 1033 1243 1060" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄτοπον.</ins>
           </span>
         </span>
       </span>
@@ -994,9 +994,9 @@
             <ins class="alt" title="nlp 1.00">τινα</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 1992 1307 2077 1332" lang="grc">
+        <span id="w_190_0" class="ocr_word" title="bbox 1992 1307 2077 1332">
           <span class="alternatives">
-            <ins title="nlp 2.00">είδιχώτατα·</ins>
+            <ins class="alt" title="nlp 2.00">εἰδικώτατα·</ins>
           </span>
         </span>
       </span>
@@ -1209,9 +1209,14 @@
             <ins class="alt" title="nlp 1.00">4,17</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 596 1754 740 1809" lang="grc">
+        <span id="w_232_0" class="ocr_word" title="bbox 596 1754 740 1809">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ Υπὲρ</ins>
+            <ins class="alt" title="nlp 2.00">Ὑπὲρ</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 596 1754 740 1809">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 774 1769 793 1794" lang="grc">
@@ -1227,11 +1232,6 @@
         <span id="w_235_0" class="ocr_word" title="bbox 1273 1748 1599 1804">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὑπερβεβηχὸς</ins>
-          </span>
-        </span>
-        <span id="w_235_1" class="ocr_word" title="bbox 1273 1748 1599 1804">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">γένος.</ins>
           </span>
         </span>
       </span>
@@ -1338,9 +1338,9 @@
             <ins class="alt" title="nlp 1.00">Ἀριστοτέλης.</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1907 1919 2086 1973" lang="grc">
+        <span id="w_256_0" class="ocr_word" title="bbox 1907 1919 2086 1973">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿ Αριστοτέλει</ins>
+            <ins class="alt" title="nlp 2.00">Ἀριστοτέλει</ins>
           </span>
         </span>
       </span>
@@ -1528,16 +1528,11 @@
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1903 2325 2090 2379" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποβεβη-</ins>
+            <ins title="nlp 2.00">ὑποβεβηκότα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 407 2397 1527 2456">
-        <span id="w_294" class="ocr_word" title="bbox 407 2423 501 2448" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κότα</ins>
-          </span>
-        </span>
         <span id="w_295" class="ocr_word" title="bbox 533 2421 586 2450" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -1680,23 +1675,7 @@
         </span>
         <span id="w_321" class="ocr_word" title="bbox 450 2671 517 2695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_322_0" class="ocr_word" title="bbox 534 2660 567 2693">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V</ins>
-          </span>
-        </span>
-        <span id="w_322_1" class="ocr_word" title="bbox 534 2660 567 2693">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">5.6</ins>
-          </span>
-        </span>
-        <span id="w_323" class="ocr_word" title="bbox 757 2656 787 2690" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ εἰς ζωόφ. χαὶ εἰς φ. Τ : ἢ εἰς τὸ ζωόφ. ἢ εἰς τὸ φ. V</ins>
+            <ins title="nlp 2.00">om. V 5.6 καὶ εἰς ζωόφ. καὶ εἰς φ. T: ἢ εἰς τὸ ζωόφ. ἢ εἰς τὸ φ. V</ins>
           </span>
         </span>
       </span>
@@ -1713,12 +1692,7 @@
         </span>
         <span id="w_326_0" class="ocr_word" title="bbox 476 2719 523 2752">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">K</ins>
-          </span>
-        </span>
-        <span id="w_326_1" class="ocr_word" title="bbox 476 2719 523 2752">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">K:</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 557 2728 624 2752" lang="grc">
@@ -1786,12 +1760,7 @@
         </span>
         <span id="w_339_0" class="ocr_word" title="bbox 1928 2708 1975 2740">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Κ</ins>
-          </span>
-        </span>
-        <span id="w_339_1" class="ocr_word" title="bbox 1928 2708 1975 2740">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">Κ:</ins>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 2003 2719 2085 2741" lang="grc">
@@ -2204,9 +2173,14 @@
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_415" class="ocr_word" title="bbox 1184 3064 1317 3111" lang="grc">
+        <span id="w_415_0" class="ocr_word" title="bbox 1184 3064 1317 3111">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿ Αριστ.]</ins>
+            <ins class="alt" title="nlp 2.00">Ἀριστ.]</ins>
+          </span>
+        </span>
+        <span id="w_415_1" class="ocr_word" title="bbox 1184 3064 1317 3111">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_416" class="ocr_word" title="bbox 1351 3065 1393 3099">
@@ -2235,11 +2209,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">p.</ins>
             <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_421" class="ocr_word" title="bbox 1755 3061 1983 3104">
-          <span class="alternatives">
-            <ins title="nlp 2.00">1017a22sq.</ins>
           </span>
         </span>
       </span>
