--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0559.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0559.html
@@ -1995,8 +1995,7 @@
         </span>
         <span id="w_387" class="ocr_word" title="bbox 736 2597 802 2620">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oin.</ins>
-            <del title="nlp 0.90">oin.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 822 2588 851 2619">
@@ -2102,8 +2101,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1031 2646 1062 2678">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_407" class="ocr_word" title="bbox 1174 2658 1271 2679" lang="grc">
@@ -2153,8 +2151,7 @@
         </span>
         <span id="w_415" class="ocr_word" title="bbox 621 2706 639 2738">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">S</ins>
-            <del title="nlp 0.90">S</del>
+            <ins title="nlp 2.00">9</ins>
           </span>
         </span>
         <span id="w_416" class="ocr_word" title="bbox 666 2706 726 2750" lang="grc">
@@ -2734,9 +2731,9 @@
             <ins class="alt" title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_520_1" class="ocr_word" title="bbox 1575 3115 1718 3158">
+        <span id="w_520_1_0" class="ocr_word" title="bbox 1575 3115 1718 3158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">σὺσιώδη—οὐδέποτε</ins>
+            <ins class="alt" title="nlp 2.00">οὐσιώδη—οὐδέποτε</ins>
           </span>
         </span>
       </span>
